2003-01-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Commands.cpp: added interframe blending commands
	* src/win32/Win32.cpp: added interframe blending support
	* src/SDL.cpp: added interframe blending support

2003-01-03  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added bilinear filter support
	* src/SDL.cpp: added bilinear filter support

2002-12-11  Forgotten  <forgotten@users.sourceforge.net>

	* src/Flash.cpp (flashSetSize): fixed reversed device ID and manufacturer ID

2002-12-09  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (fileExportGSASnapshot): change default title to internal name
	* src/win32/Win32.cpp (WindowProc): added sound volume option
	* src/win32/Win32.cpp (updateFileMenu): allow pausing even if not emulating yet
	* src/win32/Win32.cpp: added AVI writing support

2002-12-02  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Commands.cpp: added missing options
	* src/win32/Win32.cpp (updateFilter): added 32-bit mode support for Kreed filters
	* src/SDL.cpp (main): added 32-bit mode support for Kreed filters
	* src/2xSaI.cpp (Scale_2xSaI): added 32-bit mode support

2002-12-01  Forgotten  <forgotten@users.sourceforge.net>

	* src/tvmode.cpp (TVMode32): 32-bit mode support
	* src/simple2x.cpp (Simple2x32): 32-bit mode support
	* src/pixel.cpp (Pixelate32): 32-bit mode support
	* src/motionblur.cpp (MotionBlur32): 32-bit mode support
	* src/admame.cpp (AdMame2x32): 32-bit mode support
	* src/SDL.cpp (systemDrawScreen): added support for filters in 32-bit mode
	* src/win32/Win32.cpp (updateFilter): added support for filters in 32-bit mode

2002-11-29  Forgotten  <forgotten@users.sourceforge.net>

	* src/Sound.cpp (soundMix): respect sound rations for CGB and DS
	* src/GBA.cpp (CPULoadRom): fill memory to simulate no cartridge connected

2002-11-28  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPULoop): renamed arm-new.cpp and thumb.cpp to .h
